# gstQtWidget

./: .gitignore  CMakeLists.txt  README.md  camera_gui.cpp  get_build_deps.sh  gstqtMedia.cpp  gstqtMedia.h  gstqtwidget.cpp  gstqtwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  streaming_window.cpp  streaming_window.h  testgst.pro
GstSupport/: CMakeLists.txt  GstSupport.kdev4
